<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_white_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/baseline_view_list_white_24dp"
            android:title="@string/list_view" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_white_24dp"
            android:title="@string/map_view" />
        <item
            android:id="@+id/nav_mix"
            android:icon="@drawable/baseline_vertical_split_white_24dp"
            android:title="@string/mix_view" />

        <item android:title="Search">
            <menu>
                <item
                    android:id="@+id/nav_filter"
                    android:icon="@drawable/baseline_filter_list_white_24dp"
                    android:title="Filter" />
            </menu>
        </item>
    </group>
</menu>
