<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:id="@+id/homefragmentid">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/homepage" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tdlogo2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textColor="@color/TDWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mixBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_button"
            android:elevation="@dimen/cardview_default_radius"
            android:text="@string/mix_view"
            android:textColor="@color/TDWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/mapBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:elevation="@dimen/cardview_default_radius"
            android:text="@string/map_view"
            android:textColor="@color/TDWhite"
            app:layout_constraintBottom_toTopOf="@+id/mixBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/listBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/TDcolorAccent"
            android:text="@string/list_view"
            android:textColor="@color/TDWhite"
            app:layout_constraintBottom_toTopOf="@+id/mapBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/filterBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/TDcolorAccent"
            android:text="@string/filter"
            android:textColor="@color/TDWhite"
            app:layout_constraintBottom_toTopOf="@+id/listBtn"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>